--- a/www/package.json
+++ b/www/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "next": "14.1.3",
+    "openai": "^4.29.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
