--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "next": "14.1.3",
     "openai": "^4.29.2",
     "react": "^18",
