--- a/www/package.json
+++ b/www/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.6.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
+    "google-gax": "^4.3.3",
     "next": "14.1.3",
     "openai": "^4.29.2",
     "react": "^18",
