--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "author": "Victor Pineda",
   "dependencies": {
     "@google-cloud/secret-manager": "^5.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
@@ -11,6 +12,7 @@
   },
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "gts": "^5.3.0",
     "prettier": "^3.2.5",
