--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "nodemon": "^3.1.0",
+    "openai": "^4.47.2",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
