--- a/www/package.json
+++ b/www/package.json
@@ -14,11 +14,12 @@
     "@heroicons/react": "^2.1.3",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
-    "google-gax": "^4.3.3",
+    "google-gax": "^4.3.5",
     "next": "14.1.3",
     "openai": "^4.29.2",
     "react": "^18",
     "react-dom": "^18",
+    "request": "^2.88.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
