--- a/.github/workflows/generate_todos.yml
+++ b/.github/workflows/generate_todos.yml
@@ -22,6 +22,11 @@ jobs:
         brew tap PinedaVictor/vx
         brew install pinedavictor/vx/vexal
 
+    - name: Ensure CLI App is Executable
+      run: |
+        echo Updating vx permissions
+        chmod +x /home/linuxbrew/.linuxbrew/bin/vx
+        
     - name: Run CLI Command and Capture Output
       run: |
         output=$(vx -v)
