Removed nested JSON Repo config for Jira. This makes marshalling more efficent with less code

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ vx
 # vexal.io vx config 
 .vx* 
 
+# vexal.io vx config 
+.vx* 
+# vexal.io vx config 
+.vx* 
+# vexal.io vx config 
+.vx* 
+# vexal.io vx config 
+.vx* 
