Updated repo mode to include Jira project key. And working on pushing to Jira board algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ vx
  
 # vexal.io vx config 
 .vx* 
+# vexal.io vx config 
+.vx* 
+# vexal.io vx config 
+.vx* 
+# vexal.io vx config 
+.vx* 
+# vexal.io vx config 
+.vx* 
